--- a/Moisesduartem.WebApiTemplate.IoC/Moisesduartem.WebApiTemplate.IoC.csproj
+++ b/Moisesduartem.WebApiTemplate.IoC/Moisesduartem.WebApiTemplate.IoC.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	  <PackageReference Include="FluentResults" Version="3.11.0" />
+	  <PackageReference Include="FluentValidation" Version="11.2.1" />
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.1" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
