--- a/src/Moisesduartem.WebApiTemplate.IoC/Moisesduartem.WebApiTemplate.IoC.csproj
+++ b/src/Moisesduartem.WebApiTemplate.IoC/Moisesduartem.WebApiTemplate.IoC.csproj
@@ -16,6 +16,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
